# 2021-01-11-BaeMinMunBangGu-Clone-Coding

./: README.md  baemin_backup.sql  pyproject.toml
baemin/: settings.py  urls.py
decorators/: utils.py
order/: models.py  order_list.py  urls.py  views.py
order/migrations/: 0001_initial.py  0002_auto_20210121_1454.py
product/: models.py  sorts.py  urls.py  views.py
product/migrations/: 0001_initial.py  0002_auto_20210121_1454.py
user/: models.py  urls.py  views.py
user/migrations/: 0001_initial.py
