[tool.poetry]
name = "baemin_store-backend"
version = "0.1.0"
description = ""
authors = ["hyeseong-lee <hyeseong43@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
asgiref = "3.3.1"
backcall = "0.2.0"
bcrypt = "3.2.0"
certifi = "2020.12.5"
cffi = "1.14.4"
decorator = "4.4.2"
Django = "3.1.5"
django-cors-headers = "3.6.0"
django-extensions = "3.1.0"
ipython = "7.19.0"
ipython_genutils = "0.2.0"
jedi = "0.18.0"
mysqlclient = "2.0.3"
parso = "0.8.1"
pexpect = "4.8.0"
pickleshare = "0.7.5"
prompt-toolkit = "3.0.10"
ptyprocess = "0.7.0"
pycparser = "2.20"
Pygments = "2.7.4"
PyJWT = "2.0.0"
pytz = "2020.5"
six = "1.15.0"
sqlparse = "0.4.1"
traitlets = "5.0.5"
wcwidth = "0.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
